chore(categorybar): Make the categorybar return sticky   - Remove redux utilities to hide category bar   - Remove transition animation for the category bar   - Remove css style for the transition animation   - Fix footer width on mobile   - Remove the search input on the Navbar   - Remove navbar search input style [Delivers]

--- a/components/Footer/footer.module.scss
+++ b/components/Footer/footer.module.scss
@@ -10,10 +10,9 @@
   padding: 2rem 0;
 
   @include mediaMd {
-    width: 80%;
-
+    width: 100%;
     img.logo {
-      width: 30%;
+      width: 40%;
       display: block;
     }
   }
