--- a/components/common/SearchInput/searchinput.module.scss
+++ b/components/common/SearchInput/searchinput.module.scss
@@ -2,7 +2,7 @@
 @import "styles/_mixins";
 
 .searchinput {
-  width: 20vw;
+  width: 25vw;
   input {
     background-color: $color-primary-light;
   }
